Adicionei um paragrafp

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis, adipisci velit dolorem aspernatur earum, quae possimus vitae odit eius beatae quasi ipsam, itaque nisi! Iure nisi vel cupiditate nemo pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dicta voluptatem obcaecati quibusdam delectus cum, rem nostrum impedit quia maxime non quos quo accusamus ex fuga magni excepturi sed necessitatibus.</p>
 </body>
 </html>
